Limit the width of BaseControl so that the loading spinner and autocomplete suggestions are correctly aligned

--- a/packages/block-library/src/button/editor.scss
+++ b/packages/block-library/src/button/editor.scss
@@ -81,6 +81,10 @@
 	color: $dark-gray-500;
 	height: 0;
 	overflow: hidden;
+	width: 100%;
+	@include break-small() {
+		width: 300px;
+	}
 
 	.is-selected &,
 	.is-typing & {
